samples/ut/overloading/signed/IntFail01.z2
namespace org.z2legacy.samples.ut.overloading;

class IntFail01 {
	def @main() {
		test(Int.Min);
	}
	
	def test(b: Byte) {
		System.Out << b.class;
	}
	
	def test(b: Word) {
		System.Out << b.class;
	}
	
	def test(b: DWord) {
		System.Out << b.class;
	}
	
	def test(b: QWord) {
		System.Out << b.class;
	}
	
	def test(b: Small) {
		System.Out << b.class;
	}
	
	def test(b: Short) {
		System.Out << b.class;
	}
	
	def test(b: Float) {
		System.Out << b.class;
	}
	
	def test(b: Char) {
		System.Out << b.class;
	}
	
	def test(b: PtrSize) {
		System.Out << b.class;
	}
}